<resources>
    <string name="app_name">My Book</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_back_ground">Sign Up Back Ground</string>
    <string name="singUp_your_name">Your Name</string>
    <string name="singUp_your_phone">your Phone</string>
    <string name="singUp_your_email">Your Email</string>
    <string name="singUp_your_password">Your Password</string>
    <string name="singUp_your_Address">Your Address</string>
    <string name="singUp_create_an_account">Create An account</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signIn_your_email">Your Email</string>
    <string name="signIn_your_password">Your Password</string>
    <string name="signIn_button">SingIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>
